--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ ol {
   line-height: 4rem;
 } */
 
-/* ========== currencyRate ========== */
+/* ========== transations ========== */
 
 .section--transations {
   grid-row: 3;
